--- a/themes/dark_stable.qss
+++ b/themes/dark_stable.qss
@@ -38,8 +38,8 @@ QTableWidget::item:selected, QTableView::item:selected {
 
 /* Кнопки */
 QPushButton {
-    background-color: #dddddd; /* Фон кнопок */
-    color: #3c3f41; /* Светлый текст */
+    background-color: #3c3f41; /* Фон кнопок */
+    color: #ececf1; /* Светлый текст */
     border: 1px solid #565869; /* Граница кнопок */
     border-radius: 6px;
     padding: 8px 12px;
@@ -47,7 +47,7 @@ QPushButton {
 }
 
 QPushButton:hover {
-    background-color: #aaaaaa; /* Подсветка при наведении */
+    background-color: #565869; /* Подсветка при наведении */
 }
 
 QPushButton:pressed {
@@ -116,15 +116,15 @@ QMessageBox {
 }
 
 QMessageBox QPushButton {
-    background-color: #dddddd; /* Кнопки в окне сообщений */
-    color: #3c3f41; /* Светлый текст */
+    background-color: #3c3f41; /* Кнопки в окне сообщений */
+    color: #ececf1; /* Светлый текст */
     border: 1px solid #565869; /* Граница кнопок */
     border-radius: 5px;
     padding: 6px 12px;
 }
 
 QMessageBox QPushButton:hover {
-    background-color: #aaaaaa; /* Подсветка кнопок */
+    background-color: #565869; /* Подсветка кнопок */
 }
 
 QMessageBox QPushButton:pressed {
@@ -177,8 +177,8 @@ QTableWidget::item:selected, QTableView::item:selected {
 
 /* Кнопки в таблице */
 QTableWidget QPushButton, QTableView QPushButton {
-    background-color: #dddddd; /* Фон кнопок */
-    color: #3c3f41; /* Светлый текст */
+    background-color: #3c3f41; /* Фон кнопок */
+    color: #ececf1; /* Светлый текст */
     border: 1px solid #565869; /* Граница кнопок */
     border-radius: 6px;
     padding: 8px 12px;
@@ -187,7 +187,7 @@ QTableWidget QPushButton, QTableView QPushButton {
 }
 
 QTableWidget QPushButton:hover, QTableView QPushButton:hover {
-    background-color: #aaaaaa; /* Подсветка при наведении */
+    background-color: #565869; /* Подсветка при наведении */
 }
 
 QTableWidget QPushButton:pressed, QTableView QPushButton:pressed {
@@ -256,15 +256,15 @@ QMessageBox {
 }
 
 QMessageBox QPushButton {
-    background-color: #dddddd; /* Кнопки в окне сообщений */
-    color: #3c3f41; /* Светлый текст */
+    background-color: #3c3f41; /* Кнопки в окне сообщений */
+    color: #ececf1; /* Светлый текст */
     border: 1px solid #565869; /* Граница кнопок */
     border-radius: 5px;
     padding: 6px 12px;
 }
 
 QMessageBox QPushButton:hover {
-    background-color: #aaaaaa; /* Подсветка кнопок */
+    background-color: #565869; /* Подсветка кнопок */
 }
 
 QMessageBox QPushButton:pressed {
